# driftdetect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
checkdrift/: __init__.py  decorators.py
driftdetect/: __init__.py
examples/: __init__.py
examples/lendingclub/: README.md  __init__.py  api.py  baseline.json  generate_baseline.py  models.py  test_run.py
